[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figure-to-latex"
version = "0.1.0"
description = "Export Matplotlib figures to LaTeX-friendly formats"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["figure_to_latex"]